# iis

./: Dockerfile  README.md  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: test.yaml
models/: linear
notebooks/: data.ipynb  model.ipynb
reports/: metrics.txt  train_metrics.txt
src/data/: fetch_data.py
src/models/: predict_model.py
src/serve/: server.py
