[tool.poetry]
name = "iis-naloga1"
version = "1.0"
description = ""
authors = ["Julija Pesticek"]
readme = "README.md"
packages = [{include = "iis_naloga1"}]

[tool.poetry.dependencies]
python = ">=3.10.7"
numpy = "^1.24.2"
pandas = "^1.5.3"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.1"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
